feat: downgrade project compilation target to JDK 8
- Change maven.compiler.source/target from 17 to 1.8
- Downgrade Spring Boot 3.2.1 -> 2.7.18 (last JDK 8 compatible)
- Downgrade slf4j 2.0.9 -> 1.7.36, logback 1.4.14 -> 1.2.12
- Replace all JDK 9+ language features across 94 files:
  - List.of()/Map.of()/Set.of() -> Arrays.asList/Collections.*
  - Text blocks (""") -> string concatenation
  - Switch expressions (->) -> traditional switch/case
  - Pattern matching instanceof -> traditional instanceof + cast
  - var keyword -> explicit type declarations
  - String.isBlank() -> .trim().isEmpty()
  - String.repeat()/strip()/formatted() -> JDK 8 equivalents
  - Stream.toList() -> .collect(Collectors.toList())
  - Files.readString/writeString -> Files.readAllBytes/write
  - CompletableFuture.failedFuture -> manual construction
  - List.copyOf() -> Collections.unmodifiableList
  - record types -> regular classes with getters
  - jakarta.* imports -> javax.* (Spring Boot 2.7)

https://claude.ai/code/session_015RAMZHopVHP9ztiD3QidE9