@@ -1,14 +1,19 @@
 package com.lightweightai.kernel.memory.demo;
 
 import com.lightweightai.kernel.memory.embedding.MockEmbeddingProvider;
+import com.lightweightai.kernel.memory.index.HybridSearch;
 import com.lightweightai.kernel.memory.file.FileMemoryManager;
 import com.lightweightai.kernel.memory.file.SessionTranscript;
 import com.lightweightai.kernel.memory.model.SearchResult;
 import com.lightweightai.kernel.memory.model.TranscriptEntry;
 import com.lightweightai.kernel.memory.queue.LaneQueueManager;
+import com.lightweightai.kernel.memory.tools.MemorySearchTool;
 import com.lightweightai.kernel.memory.tools.MemoryToolkit;
+import com.lightweightai.kernel.memory.tools.WriteMemoryTool;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
@@ -59,20 +64,27 @@ public class MemoryDemo {
         String command = parts[0].toLowerCase();
         String arg = parts.length > 1 ? parts[1] : "";
 
-        switch (command) {
-            case "/help" -> printHelp();
-            case "/search" -> doSearch(arg);
-            case "/remember" -> doRemember(arg);
-            case "/forget" -> doForget(arg);
-            case "/status" -> showStatus();
-            case "/history" -> showHistory();
-            case "/sessions" -> listSessions();
-            case "/new" -> newSession(arg);
-            case "/quit", "/exit" -> {
-                System.out.println("再见！");
-                return false;
-            }
-            default -> System.out.println("未知命令。输入 /help 查看帮助。");
+        if ("/help".equals(command)) {
+            printHelp();
+        } else if ("/search".equals(command)) {
+            doSearch(arg);
+        } else if ("/remember".equals(command)) {
+            doRemember(arg);
+        } else if ("/forget".equals(command)) {
+            doForget(arg);
+        } else if ("/status".equals(command)) {
+            showStatus();
+        } else if ("/history".equals(command)) {
+            showHistory();
+        } else if ("/sessions".equals(command)) {
+            listSessions();
+        } else if ("/new".equals(command)) {
+            newSession(arg);
+        } else if ("/quit".equals(command) || "/exit".equals(command)) {
+            System.out.println("再见！");
+            return false;
+        } else {
+            System.out.println("未知命令。输入 /help 查看帮助。");
         }
         return true;
     }
@@ -82,7 +94,7 @@ public class MemoryDemo {
         currentSession.append(TranscriptEntry.userMessage(message));
 
         // Search for context
-        var results = memory.search(message);
+        List<SearchResult> results = memory.search(message);
 
         if (!results.isEmpty()) {
             System.out.println("\n[回忆起相关记忆...]");
@@ -121,7 +133,10 @@ public class MemoryDemo {
             return;
         }
 
-        var result = toolkit.getSearchTool().execute(Map.of("query", query, "top_k", 5));
+        Map<String, Object> searchParams = new HashMap<>();
+        searchParams.put("query", query);
+        searchParams.put("top_k", 5);
+        MemorySearchTool.MemorySearchResult result = toolkit.getSearchTool().execute(searchParams);
         System.out.println(result.toText());
     }
 
@@ -131,11 +146,11 @@ public class MemoryDemo {
             return;
         }
 
-        var result = toolkit.getWriteTool().execute(Map.of(
-            "content", content,
-            "type", "durable",
-            "section", "用户笔记"
-        ));
+        Map<String, Object> writeParams = new HashMap<>();
+        writeParams.put("content", content);
+        writeParams.put("type", "durable");
+        writeParams.put("section", "用户笔记");
+        WriteMemoryTool.WriteMemoryResult result = toolkit.getWriteTool().execute(writeParams);
         System.out.println(result.toText());
     }
 
@@ -144,7 +159,7 @@ public class MemoryDemo {
     }
 
     private void showStatus() {
-        var stats = memory.getIndexStats();
+        HybridSearch.IndexStats stats = memory.getIndexStats();
         System.out.println("\n=== 系统状态 ===");
         System.out.println("Agent ID: " + memory.getAgentId());
         System.out.println("Agent 目录: " + memory.getAgentRoot());
@@ -156,14 +171,14 @@ public class MemoryDemo {
     }
 
     private void showHistory() {
-        var entries = currentSession.readAll();
+        List<TranscriptEntry> entries = currentSession.readAll();
         if (entries.isEmpty()) {
             System.out.println("当前会话没有历史记录。");
             return;
         }
 
         System.out.println("\n=== 会话历史 ===");
-        for (var entry : entries) {
+        for (TranscriptEntry entry : entries) {
             String role = entry.getRole();
             String content = entry.getContent();
             if (role != null && content != null) {
@@ -173,7 +188,7 @@ public class MemoryDemo {
     }
 
     private void listSessions() {
-        var sessions = memory.listSessions();
+        List<String> sessions = memory.listSessions();
         if (sessions.isEmpty()) {
             System.out.println("没有历史会话。");
             return;
@@ -226,8 +241,8 @@ public class MemoryDemo {
 
     public static void main(String[] args) {
         Path agentRoot = args.length > 0
-            ? Path.of(args[0])
-            : Path.of(System.getProperty("user.home"), ".lightweightai", "agents", "demo");
+            ? Paths.get(args[0])
+            : Paths.get(System.getProperty("user.home"), ".lightweightai", "agents", "demo");
 
         new MemoryDemo(agentRoot).run();
     }
