@@ -4,6 +4,10 @@ import com.lightweightai.kernel.memory.file.FileMemoryManager;
 import com.lightweightai.kernel.memory.model.SearchOptions;
 import com.lightweightai.kernel.memory.model.SearchResult;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -38,8 +42,8 @@ public class MemorySearchTool {
      */
     public MemorySearchResult execute(Map<String, Object> parameters) {
         String query = (String) parameters.get("query");
-        if (query == null || query.isBlank()) {
-            return new MemorySearchResult(false, "Query parameter is required", List.of());
+        if (query == null || query.trim().isEmpty()) {
+            return new MemorySearchResult(false, "Query parameter is required", Collections.<MemoryMatch>emptyList());
         }
 
         int topK = getIntParam(parameters, "top_k", 5);
@@ -68,28 +72,33 @@ public class MemorySearchTool {
      * Get JSON schema for tool definition.
      */
     public static Map<String, Object> getToolSchema() {
-        return Map.of(
-            "name", TOOL_NAME,
-            "description", TOOL_DESCRIPTION,
-            "input_schema", Map.of(
-                "type", "object",
-                "properties", Map.of(
-                    "query", Map.of(
-                        "type", "string",
-                        "description", "The search query to find relevant memories"
-                    ),
-                    "top_k", Map.of(
-                        "type", "integer",
-                        "description", "Number of results to return (default: 5)"
-                    ),
-                    "vector_weight", Map.of(
-                        "type", "number",
-                        "description", "Weight for semantic search 0-1 (default: 0.7)"
-                    )
-                ),
-                "required", List.of("query")
-            )
-        );
+        Map<String, Object> queryProp = new HashMap<>();
+        queryProp.put("type", "string");
+        queryProp.put("description", "The search query to find relevant memories");
+
+        Map<String, Object> topKProp = new HashMap<>();
+        topKProp.put("type", "integer");
+        topKProp.put("description", "Number of results to return (default: 5)");
+
+        Map<String, Object> vectorWeightProp = new HashMap<>();
+        vectorWeightProp.put("type", "number");
+        vectorWeightProp.put("description", "Weight for semantic search 0-1 (default: 0.7)");
+
+        Map<String, Object> properties = new HashMap<>();
+        properties.put("query", queryProp);
+        properties.put("top_k", topKProp);
+        properties.put("vector_weight", vectorWeightProp);
+
+        Map<String, Object> inputSchema = new HashMap<>();
+        inputSchema.put("type", "object");
+        inputSchema.put("properties", properties);
+        inputSchema.put("required", Collections.singletonList("query"));
+
+        Map<String, Object> schema = new HashMap<>();
+        schema.put("name", TOOL_NAME);
+        schema.put("description", TOOL_DESCRIPTION);
+        schema.put("input_schema", inputSchema);
+        return schema;
     }
 
     private int getIntParam(Map<String, Object> params, String key, int defaultValue) {
@@ -110,11 +119,21 @@ public class MemorySearchTool {
 
     // Result types
 
-    public record MemorySearchResult(
-        boolean success,
-        String error,
-        List<MemoryMatch> matches
-    ) {
+    public static final class MemorySearchResult {
+        private final boolean success;
+        private final String error;
+        private final List<MemoryMatch> matches;
+
+        public MemorySearchResult(boolean success, String error, List<MemoryMatch> matches) {
+            this.success = success;
+            this.error = error;
+            this.matches = matches;
+        }
+
+        public boolean success() { return success; }
+        public String error() { return error; }
+        public List<MemoryMatch> matches() { return matches; }
+
         public String toText() {
             if (!success) {
                 return "Error: " + error;
@@ -134,10 +153,22 @@ public class MemorySearchTool {
         }
     }
 
-    public record MemoryMatch(
-        String content,
-        String source,
-        float score,
-        String snippet
-    ) {}
+    public static final class MemoryMatch {
+        private final String content;
+        private final String source;
+        private final float score;
+        private final String snippet;
+
+        public MemoryMatch(String content, String source, float score, String snippet) {
+            this.content = content;
+            this.source = source;
+            this.score = score;
+            this.snippet = snippet;
+        }
+
+        public String content() { return content; }
+        public String source() { return source; }
+        public float score() { return score; }
+        public String snippet() { return snippet; }
+    }
 }
