@@ -3,6 +3,8 @@ package com.lightweightai.assessment.scale;
 import com.lightweightai.assessment.model.ScaleDefinition;
 import com.lightweightai.assessment.model.ScaleType;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 
 /**
@@ -13,14 +15,14 @@ import java.util.List;
 public class Pss10Scale {
 
     /** Indices of reverse-scored items (0-based). */
-    public static final java.util.Set<Integer> REVERSED_ITEMS = java.util.Set.of(3, 4, 6, 7);
+    public static final java.util.Set<Integer> REVERSED_ITEMS = new HashSet<>(Arrays.asList(3, 4, 6, 7));
 
     public static ScaleDefinition definition() {
         return new ScaleDefinition(
             ScaleType.PSS10,
             "压力知觉量表 (PSS-10)",
             "在过去一个月里，以下感受出现的频率是多少？",
-            List.of(
+            Arrays.asList(
                 new ScaleDefinition.Question(0, "因为突发事件感到心烦意乱"),
                 new ScaleDefinition.Question(1, "感到无法控制生活中重要的事情"),
                 new ScaleDefinition.Question(2, "感到紧张和有压力"),
@@ -32,8 +34,8 @@ public class Pss10Scale {
                 new ScaleDefinition.Question(8, "因超出你控制范围的事而感到愤怒"),
                 new ScaleDefinition.Question(9, "感到困难积累到无法克服的程度")
             ),
-            List.of("从不", "几乎不", "有时", "经常", "总是"),
-            List.of(0, 1, 2, 3, 4)
+            Arrays.asList("从不", "几乎不", "有时", "经常", "总是"),
+            Arrays.asList(0, 1, 2, 3, 4)
         );
     }
 
