@@ -4,6 +4,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
@@ -18,15 +20,15 @@ public class CrisisDetector {
 
     private static final Logger logger = LoggerFactory.getLogger(CrisisDetector.class);
 
-    private static final Set<String> HIGH_RISK_KEYWORDS = Set.of(
+    private static final Set<String> HIGH_RISK_KEYWORDS = new HashSet<>(Arrays.asList(
         "自杀", "自残", "割腕", "不想活", "不想活了", "活不下去", "活着没意思",
         "了结", "结束生命", "结束一切", "去死", "想死", "寻死", "轻生",
         "跳楼", "上吊", "服药", "吃药死", "安眠药", "死了算了",
         "不如死了", "宁可死", "死比活好", "死心", "没有活下去的理由",
         "没有活下去的意义", "再也不想见到明天", "不想醒来"
-    );
+    ));
 
-    private static final List<Pattern> HIGH_RISK_PATTERNS = List.of(
+    private static final List<Pattern> HIGH_RISK_PATTERNS = Arrays.asList(
         Pattern.compile("不想.*活"),
         Pattern.compile("活.*没.*意思"),
         Pattern.compile("结束.*生命"),
@@ -43,7 +45,7 @@ public class CrisisDetector {
      * @return SafetyResult with SAFE or CRISIS level
      */
     public SafetyResult check(String message) {
-        if (message == null || message.isBlank()) {
+        if (message == null || message.trim().isEmpty()) {
             return SafetyResult.safe();
         }
 
